library.properties - paragraph

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=WILMOUTH Steven
 maintainer=WILMOUTH Steven
 sentence=Gets temperature in Celcius with LM35 and convert in Fahrenheit or Kelvin
-paragraph=
+paragraph=This library for Arduino allows you to use the LM35 temperature sensor.
 category=Sensors
 url=https://github.com/manghao/LM35
 architectures=*
