--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=LM35
 version=1.0.0
 author=WILMOUTH Steven
 maintainer=WILMOUTH Steven
-sentence=Gets temperature in Celcius with LM35 and convert in Fahrenheit or Kelvin
-paragraph=This library for Arduino allows you to use the LM35 temperature sensor.
+paragraph=Gets temperature in Celcius with LM35 and convert in Fahrenheit or Kelvin
+sentence=This library for Arduino allows you to use the LM35 temperature sensor.
 category=Sensors
 url=https://github.com/manghao/LM35
 architectures=*
