--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=WILMOUTH Steven
 paragraph=Gets temperature in Celcius with LM35 and convert in Fahrenheit or Kelvin
 sentence=This library for Arduino allows you to use the LM35 temperature sensor.
 category=Sensors
-url=https://github.com/manghao/LM35
+url=https://github.com/wilmouths/LM35
 architectures=*
